src/objects/Article_Quality_Questions__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Art_Meets_Content_Standard_Weight__c</fullName>
        <label>Art Meets Content Standard Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Article_Unique_Weight__c</fullName>
        <label>Article Unique Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Content_Complete_Weight__c</fullName>
        <label>Content Complete Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Content_Understandable_Weight__c</fullName>
        <label>Content Understandable Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Links_In_Article_Valid_Weight__c</fullName>
        <label>Links In Article Valid Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Possible_Points__c</fullName>
        <label>Possible Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Properties_Set_Appropriately_Weight__c</fullName>
        <label>Properties Set Appropriately Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selected_Languages__c</fullName>
        <label>Selected Languages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Accurate_Weight__c</fullName>
        <label>Title Accurate Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Article Quality Questions</label>
</CustomObject>